<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/umiwi_a_f_bg_style"
    android:orientation="vertical" >

    <include layout="@layout/toolbar_actionbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/umiwi_white" >

        <TextView
            android:id="@+id/right_bt_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/right_share"
            android:textColor="@color/umiwi_gray_6"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/category_hot" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/umiwi_white" >

        <TextView
            android:id="@+id/right_bt_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/right_version"
            android:textColor="@color/umiwi_gray_6"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/category_hot" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/umiwi_white" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="使用2G/3G/4G环境播放"
            android:textColor="@color/umiwi_gray_6"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/right_show3g"
            style="@style/Widget.Button.Toggle.t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/umiwi_white" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/right_push"
            android:textColor="@color/umiwi_gray_6"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/right_ck_push"
            style="@style/Widget.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/downpath_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/umiwi_white" >

        <TextView
            android:id="@+id/right_bt_downpath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/right_downpath"
            android:textColor="@color/umiwi_gray_6"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/category_hot" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/umiwi_white" >

        <TextView
            android:id="@+id/right_bt_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/right_update"
            android:textColor="@color/umiwi_gray_6"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/category_hot" />
    </RelativeLayout>

</LinearLayout>